ssl config parsing

--- a/BASE.conf
+++ b/BASE.conf
@@ -1,5 +1,5 @@
 storage:
-  dbPath: /home/vagrant/##DBPATH##
+  dbPath: ##DBPATH##
 net:
   bindIp: 0.0.0.0
   port: ##PORT##
@@ -7,7 +7,7 @@ security:
   keyFile: ##KEYFILE##
 systemLog:
   destination: file
-  path: /home/vagrant/##DBPATH##/mongo.log
+  path: ##DBPATH##/mongo.log
   logAppend: true
 processManagement:
   fork: true
