--- a/sampleblueprint.yaml
+++ b/sampleblueprint.yaml
@@ -10,16 +10,16 @@ resources:
   - name: DB1
     description: db 1 of replica set
     os: ubuntu
-    size: t2-micro
+    size: t2.micro
   - name: DB2
     description: db 2 of replica set
     os: ubuntu
-    size: t2-micro
-  - name: DB1
+    size: t2.micro
+  - name: DB3
     description: db 2 of replica set
     os: ubuntu
-    size: t2-micro
+    size: t2.micro
   - name: OpsMgr
     description: Ops manager for deployment
     os: ubuntu
-    size: t2-large
+    size: t2.large
